--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         <!-- Contact starts -->
         <section id="contact" class="full-height px-lg-5">
           <div class="container">
-            <div class="row justify-content-center text-center" data-aos="zoom-out-up">
+            <div class="row justify-content-center text-center" data-aos="fade-up">
               <div class="col-lg-8 pb-4">
                 <h6 class="text-brand">Contacto</h6>
                 <h1>¿Te interesa trabajar conmigo? Charlemos!</h1>
