--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
     <!-- Nav-bar starts -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container flex-lg-column">
-          <a class="navbar-brand mx-lg-auto mb-lg-4" href="#"><span class="h3 fw-bold d-block d-lg-none">GS Flexability</span>
+          <a class="navbar-brand" href="#"><span class="h3 fw-bold d-block d-lg-none">GS Flexability</span>
             <img src="../gs-flexibility/img/default.svg" alt="Profile photo" class="d-none d-lg-block rounded-circle shadow-effect">
         </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
