--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="container">
                 <div class="row pb-4">
                     <div class="col-lg-6">
-                        <h1 class="display-4 fw-bold" data-aos="fade-up">Mi nombre es <span class="text-brand">[....]</span>, de [.....]</h1>
+                        <h1 class="display-4 fw-bold" data-aos="fade-up">Mi nombre es <span class="text-brand">Greta Sotelo</span>, artista de circo.</h1>
                         <p class="lead fw-bold mt-2 mb-4" data-aos="fade-up" data-aos-delay='300'>Doy clases de [....<span class="text-brand">....]</span></p>
                         <a href="#about" class="btn btn-dark" data-aos="fade-up" data-aos-delay='600'>Explorar mi trabajo</a>
                     </div>
