--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/line-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     
     <title>GS Flexability</title>
 </head>
