--- a/flexibility.html
+++ b/flexibility.html
@@ -51,7 +51,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 center-container">
-                        <img src="/img/95052.jpg" alt="" class="img-fluid" data-aos="fade-up" data-aos-delay='100'>
+                        <img src="img/95052.jpg" alt="" class="img-fluid" data-aos="fade-up" data-aos-delay='100'>
                     </div>
                     <div class="col-lg-12 my-2 text-center" data-aos="fade-up">
                         <h1 class="text-brand my-2">Flexihabilidad</h6>
