--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="col-lg-12 center-container mt-4">
                       <div>
-                        <img src="img/6353 .jpg" alt="" data-aos="fade-up" data-aos-delay='300' class="">
+                        <img src="img/6353min.jpg" alt="" data-aos="fade-up" data-aos-delay='300' class="">
                       </div>
 
                     </div>
