--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                   </div>
                   <div class="container center-container gy-5">
                     <div class="col-lg-8 img-fluid">
-                      <img src="img/_Y7A6390_1-removebg.png" alt="" class="" data-aos="fade-up" data-aos-delay="300">
+                      <img src="img/Y7A63901removebg.png" alt="" class="" data-aos="fade-up" data-aos-delay="300">
                     </div>
                   </div>
 
