--- a/flexibility.html
+++ b/flexibility.html
@@ -18,7 +18,7 @@
     <!-- Nav-bar starts -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container flex-lg-column">
-          <a class="navbar-brand" href="#"><span class="h3 fw-bold d-block d-lg-none">GS Flexability</span>
+          <a class="navbar-brand" href="index.html"><span class="h3 fw-bold d-block d-lg-none">GS Flexability</span>
             <img src="img/default.svg" alt="Profile photo" class="d-none d-lg-block rounded-circle shadow-effect img-fluid">
         </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +33,7 @@
                 <a class="nav-link" href="index.html#about">Sobre mi</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="index.html#videoteca">Videoteca</a>
+                <a class="nav-link" href="videoteca.html">Videoteca</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="index.html#plans">Planes</a>
@@ -47,8 +47,8 @@
       </nav>
     <!-- Nav-bar ends -->
     <div id="content-wrapper">
-        <section id="plans" class="full-height px-lg-5">
-            <div class="container">
+        <section id="flex" class="full-height px-lg-5">
+            <!-- <div class="container">
                 <div class="row">
                     <div class="col-lg-12 center-container">
                         <img src="img/95052.jpg" alt="" class="img-fluid" data-aos="fade-up" data-aos-delay='100'>
@@ -57,8 +57,8 @@
                         <h1 class="text-brand my-2">Flexihabilidad</h6>
                         <h3 class="my-2">Algunas cositas sobre el plan:</h1>
                     </div>
-                </div>
-                <div class="row justify-content-center">
+                </div> -->
+                <div class="row justify-content-center info-container">
                     <div class="col-md-6" data-aos="fade-up" data-aos-delay='500'>
                         <div class="service p-4 bg-base rounded-4 shadow-effect">
                             <div class="iconbox rounded-4 my-2">
