Added photography credits

--- a/index.html
+++ b/index.html
@@ -233,6 +233,9 @@
               <div class="col-auto">
                 <p class="mb-0">Design and development by <a href="https://github.com/imnotseneca" class="text-brand">Bruno Corrao.</a></p>
               </div>
+              <div class="col-auto">
+                <p class="mb-0">Photography by <span class="text-brand"><a href="https://www.instagram.com/nataliaterryfotografia/"class="text-brand"></a>Natalia Terry.</span></p>
+              </div>
             </div>
           </div>
         </foooter>
