Modificacion de los footers en las paginas

--- a/flexibility.html
+++ b/flexibility.html
@@ -110,19 +110,19 @@
         </section>
         <!-- Footer starts -->
         <footer class="py-5 bg-base">
-            <div class="container">
-                      <div class="row gy-4 justify-content-center">
-                        <div class="col-auto">
-                          <p class="mb-0">Copyright &copy; 2022 <span class="text-brand">Greta Sotelo.</span></p>
-                        </div>
-                        <div class="col-auto logo ">
-                          <img src="img/default.svg" alt="Profile photo" class="my-4 d-lg-block rounded-circle shadow-effect">
-                        </div>
-                        <div class="col-auto">
-                          <p class="mb-0">Design and development by <a href="https://github.com/imnotseneca" class="text-brand">Bruno Corrao.</a></p>
-                        </div>
-                      </div>
+          <div class="container">
+            <div class="row gy-4 justify-content-center">
+              <div class="col-auto">
+                <p class="mb-0">Copyright &copy; 2022 <span class="text-brand"><a href="https://www.instagram.com/gretacsotelo/" class="text-brand">Greta Sotelo.</a></span></p>
+              </div>
+              <div class="col-auto">
+                <p class="mb-0">Design and development by <a href="https://github.com/imnotseneca" class="text-brand">Bruno Corrao.</a></p>
+              </div>
+              <div class="col-auto">
+                <p class="mb-0">Photography by <span class="text-brand"><a href="https://www.instagram.com/nataliaterryfotografia/"class="text-brand"></a>Natalia Terry.</span></p>
+              </div>
             </div>
+          </div>
         </foooter>
         <!-- Footer ends -->
     </div>
