--- a/index.html
+++ b/index.html
@@ -54,12 +54,14 @@
             <div class="container service p-4 bg-base rounded-4 shadow-effect fix-width" data-aos="fade-up" data-aos-delay="300">
                 <div class="row pb-4 justify-content-around">
                     <div class=" fix-width">
-                        <h1 class="display-4 fw-bold text-center" data-aos="fade-up">Mi nombre es <br> <span class="text-brand">Greta Sotelo</span></h1>
-                        <h3 class="text-dark fw-bold mt-2 mb-4 text-center" data-aos="fade-up" data-aos-delay='300'>Artista de Circo</h3>
-                        <p class="lead fw-bold mt-2 mb-4 text-center" data-aos="fade-up" data-aos-delay='300'>Con el <span class="text-brand">amor</span> y la <span class="rainbow-text">libertad</span> como banderas.</p>
+                        <h1 class="display-4 fw-bold text-center" data-aos="fade-up">Mi nombre es <br> <span class="text-brand">Greta Sotelo 👋</span></h1>
+                        <h3 class="fw-bold mt-2 mb-4 text-center" data-aos="fade-up" data-aos-delay='300'>Artista de Circo 🎪</h3>
+                        <p class="lead fw-bold mt-2 mb-4 text-center" data-aos="fade-up" data-aos-delay='300'>
+                          
+                         Con el <span id="rainbow-text" data-gradient-colors="#f44336,#ff5722,#ff9800,#ffeb3b,#cddc39,#4caf50,#2196f3,#9c27b0">amor</span> y la <span id="rainbow-text" data-gradient-colors="#7c4dff,#5e35b1,#4527a0,#283593,#1e88e5,#039be5,#00acc1,#00897b">libertad</span> como banderas 🏳️‍🌈 </p>
                     </div>
                 </div>
-           </div>
+
         </section>
         <!-- Home ends -->
         <section class="separator">
@@ -82,7 +84,7 @@
                     <div class="bg-base p-4 rounded-4 shadow-effect">
                       <h4>Mi formación como artista:</h4>
                       <p class="text-brand fw-bold mb-2">Lo individual y lo colectivo atraviesan mi vocación docente, que se define por ser interdisciplinaria, creativa, profesional y en la búsqueda permanente de usar el cuerpo como comunicador. </p>
-                      <p class="mb-0 fw-bold">Llena de proyectos y ganas de mundo, soy una persona que siempre está en movimiento.</p>
+                      <p class="mb-0 fw-bold">Llena de proyectos y ganas de mundo 🌍, soy una persona que siempre está en movimiento.</p>
                     </div>
                   </div>                           
                 </div>
@@ -222,6 +224,7 @@
           </div> -->
           <!-- Form ends -->
         </section>
+      </div>
         <!-- Contact ends -->
         <!-- Footer starts -->
         <footer class="py-5 bg-base">
@@ -234,7 +237,7 @@
                 <p class="mb-0">Design and development by <a href="https://github.com/imnotseneca" class="text-brand">Bruno Corrao.</a></p>
               </div>
               <div class="col-auto">
-                <p class="mb-0">Photography by <span class="text-brand"><a href="https://www.instagram.com/nataliaterryfotografia/"class="text-brand"></a>Natalia Terry.</span></p>
+                <p class="mb-0">Photography by <span class="text-brand"><a href="https://www.instagram.com/nataliaterryfotografia/"class="text-brand">Natalia Terry.</a></span></p>
               </div>
             </div>
           </div>
