fixed bg-img size

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         </section>
         <!-- Home ends -->
-        <section class="separator">
+        <section class="separator1">
           <div class="container"></div>
         </section>
         <!-- About starts -->
@@ -112,7 +112,7 @@
           </div>
         </section>
         <!-- About ends -->
-        <section class="separator">
+        <section class="separator2">
           <div class="container"></div>
         </section>
         <!-- Plans starts -->
@@ -174,7 +174,7 @@
             </div>
         </section>
         <!-- Plans ends -->
-        <section class="separator">
+        <section class="separator3">
           <div class="container"></div>
         </section>
         <!-- Contact starts -->
