removed animation to improve page load

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             <div class="container service p-4 bg-base rounded-4 shadow-effect fix-width" data-aos="fade-up" data-aos-delay="300">
                 <div class="row pb-4 justify-content-around">
                     <div class=" fix-width">
-                        <h1 class="display-4 fw-bold text-center" data-aos="fade-up">Mi nombre es <br> <span class="text-brand">Greta Sotelo 👋</span></h1>
-                        <h3 class="fw-bold mt-2 mb-4 text-center" data-aos="fade-up" data-aos-delay='300'>Artista de Circo 🎪</h3>
-                        <p class="lead fw-bold mt-2 mb-4 text-center" data-aos="fade-up" data-aos-delay='300'>
+                        <h1 class="display-4 fw-bold text-center">Mi nombre es <br> <span class="text-brand">Greta Sotelo 👋</span></h1>
+                        <h3 class="fw-bold mt-2 mb-4 text-center" >Artista de Circo 🎪</h3>
+                        <p class="lead fw-bold mt-2 mb-4 text-center">
                           
                          Con el <span id="rainbow-text" data-gradient-colors="#f44336,#ff5722,#ff9800,#ffeb3b,#cddc39,#4caf50,#2196f3,#9c27b0">amor</span> y la <span id="rainbow-text" data-gradient-colors="#7c4dff,#5e35b1,#4527a0,#283593,#1e88e5,#039be5,#00acc1,#00897b">libertad</span> como banderas 🏳️‍🌈 </p>
                     </div>
@@ -69,7 +69,7 @@
         </section>
         <!-- About starts -->
         <section id="about" class="full-height px-lg-5 text-center">
-          <div class="center-container" data-aos="fade-up">
+          <div class="center-container">
             <div class="col-lg-12">
                 <h2 class="text-brand text-center">SOBRE MI</h2>
                 <h3 class="text-center">Algunos detalles de mi experiencia y formación:</h3>
@@ -77,10 +77,10 @@
           </div>
           <div class="container center-container">
             <div class="center-container gy-5 row fix-width">              
-              <div>
-                <h3 class="my-4" data-aos="fade-up" data-aos-delay="300"></h3 class="mb-4">
+              <div data-aos="fade-up" data-aos-delay="300">
+                <h3 class="my-4" ></h3 class="mb-4">
                 <div class="row gy-4 fix-height">
-                  <div class="col-12" data-aos="fade-up" data-aos-delay="600">
+                  <div class="col-12" >
                     <div class="bg-base p-4 rounded-4 shadow-effect">
                       <h4>Mi formación como artista:</h4>
                       <p class="text-brand fw-bold mb-2">Lo individual y lo colectivo atraviesan mi vocación docente, que se define por ser interdisciplinaria, creativa, profesional y en la búsqueda permanente de usar el cuerpo como comunicador. </p>
@@ -89,10 +89,10 @@
                   </div>                           
                 </div>
               </div>
-              <div>
-                <h3 class="my-4" data-aos="fade-up" data-aos-delay="300"></h3 class="mb-4">
+              <div data-aos="fade-up" data-aos-delay="300">
+                <h3 class="my-4" ></h3 class="mb-4">
                 <div class="row gy-4  fix-height">
-                  <div class="col-12" data-aos="fade-up" data-aos-delay="600">
+                  <div class="col-12" >
                     <div class="bg-base p-4 rounded-4 shadow-effect">
                       <h4>Mi experiencia:</h4>
                       <p class="text-brand fw-bold mb-2">Inicié este hermoso camino hace 8 años y desde entonces estoy más tiempo cabeza abajo que sobre los pies. Ser siempre curiosa y energética me lleva a formarme en un montón de disciplinas, como la parada de manos, acrobacia en dúo, acrobacia en suelo y especialmente en acrobacia en telas y flexibilidad, actividades de las cuales soy entrenadora hace 5 años.</p>
@@ -119,7 +119,7 @@
         <section id="plans" class="full-height px-lg-5">
             <div class="container center-container flex-column">
                 <div class="row justify-content-center">
-                    <div class="text-center my-2" data-aos="fade-up">
+                    <div class="text-center my-2">
                         <h2 class="text-brand my-2">PLANES</h2>
                         <h3 class="my-2">Conocimientos que puedo ofrecer:</h3>
                     </div>
